# advent-of-code

./: .gitignore
2022/hs/: aoc2022.cabal
2022/hs/app/: Lib.hs  Main.hs  S1.hs  S10.hs  S11.hs  S12.hs  S13.hs  S14.hs  S15.hs  S16.hs  S17.hs  S18.hs  S19.hs  S2.hs  S20.hs  S21.hs  S22.hs  S23.hs  S24.hs  S25.hs  S3.hs  S4.hs  S5.hs  S6.hs  S7.hs  S8.hs  S9.hs
2022/rust/: Cargo.toml
2022/rust/src/: lib.rs  t1.rs  t10.rs  t11.rs  t12.rs  t13.rs  t14.rs  t18.rs  t2.rs  t3.rs  t4.rs  t5.rs  t7.rs  t8.rs  t9.rs
2023/inputs/: tt12
2023/raku/: 1.pl
2023/rust/: Cargo.toml
2023/rust/src/: lib.rs  main.rs  t1.rs  t10.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  t16.rs  t17.rs  t18.rs  t19.rs  t2.rs  t20.rs  t21.rs  t22.rs  t23.rs  t24.rs  t25.rs  t3.rs  t4.rs  t5.rs  t6.rs  t7.rs  t8.rs  t9.rs
2024/kotlin/aoc2024/: build.gradle.kts
2024/kotlin/aoc2024/src/main/kotlin/: Day.kt  Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day2.kt  Day20.kt  Day21.kt  Day22.kt  Day23.kt  Day24.kt  Day25.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt  Main.kt
2024/kotlin/aoc2024/src/main/kotlin/util/: Collections.kt  Graph.kt  Math.kt  Navigation.kt
2024/kotlin/aoc2024/src/main/resources/: Day19.txt
