[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
gcollections = "1.5.0"
hex = "0.4.3"
intervallum = "1.4.1"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
priority-queue = "1.3.2"
regex = "1.10.2"
z3 = "0.12.1"
